# ffhilfe

./: LICENSE  README.md  const.py  convert.py  requirements-dev.txt  setup.cfg  setup.py
src/ffhilfe/: cli.py  main.py
src/ffhilfe/core/: exception.py  executable.py  io.py  matroska.py  processes.py
src/ffhilfe/cropdetect/: cli.py
src/ffhilfe/m4b/: cli.py  execution.py  metadata.py  metadata_template.txt
src/ffhilfe/transcode/: cli.py  helpers.py  main.py  settings.py
tests/: test_core_executable.py  test_core_matroska.py  test_io.py  test_m4b.py
