[metadata]
name = ffhilfe
author = Yennick Schepers
description = ffmpeg-helper
description-file = README.md
home-page = https://github.com/yennicks/ffhilfe
url = https://github.com/yennicks/ffhilfe

[files]
packages =
    ffhilfe

[entry_points]
console_scripts =
    ffhilfe = ffhilfe.cli:cli

[flake8]
max-line-length = 80
ignore = E501,W503,E402,W291,F401
